--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -571,13 +571,10 @@ jobs:
        run: |
          python scripts/regression/test_runner.py --old unsafe/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/imdb.csv --verbose --threads 2
 
-  vector-sizes:
-    name: Block Sizes
+  vector-and-block-sizes:
+    name: Tests different vector and block sizes
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
-    env:
-      GEN: ninja
-      CORE_EXTENSIONS: "json;parquet"
 
     steps:
       - uses: actions/checkout@v3
@@ -594,9 +591,14 @@ jobs:
           key: ${{ github.job }}
           save: ${{ env.CCACHE_SAVE }}
 
-      - name: Build with vector size of 512
+      - name: Build
+        id: build
         shell: bash
-        run: STANDARD_VECTOR_SIZE=512 make relassert
+        env:
+          CORE_EXTENSIONS: "json;parquet;icu;tpch;tpcds"
+          GEN: ninja
+          STANDARD_VECTOR_SIZE: 512
+        run: make relassert
 
       - name: Fast and storage tests with default and small block size
         shell: bash
@@ -605,6 +607,52 @@ jobs:
           ./build/relassert/test/unittest "test/sql/storage/*"
           ./build/relassert/test/unittest --test-config test/configs/small_block_size.json
           ./build/relassert/test/unittest "test/sql/storage/*" --test-config test/configs/small_block_size.json
+
+  linux-debug-configs:
+    name: Tests different configurations with a debug build
+    runs-on: ubuntu-24.04
+    needs: linux-memory-leaks
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Install
+        shell: bash
+        run: sudo apt-get update -y -qq && sudo apt-get install -y -qq ninja-build
+
+      - name: Setup Ccache
+        uses: hendrikmuhs/ccache-action@main
+        with:
+          key: ${{ github.job }}
+          save: ${{ env.CCACHE_SAVE }}
+
+      - name: Build
+        id: build
+        shell: bash
+        env:
+          CORE_EXTENSIONS: "json;parquet;icu;tpch;tpcds"
+          GEN: ninja
+        run: make debug
+
+      - name: test/configs/force_storage.json
+        if: (success() || failure()) && steps.build.conclusion == 'success'
+        shell: bash
+        run: |
+          ./build/debug/test/unittest --test-config test/configs/force_storage.json
+
+      - name: test/configs/latest_storage.json
+        if: (success() || failure()) && steps.build.conclusion == 'success'
+        shell: bash
+        run: |
+          ./build/debug/test/unittest --test-config test/configs/latest_storage.json
+
+      - name: test/configs/enable_verification.json
+        if: (success() || failure()) && steps.build.conclusion == 'success'
+        shell: bash
+        run: |
+          ./build/debug/test/unittest --test-config test/configs/enable_verification.json
 
   linux-wasm-experimental:
     name: WebAssembly duckdb-wasm builds
