--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -423,6 +423,12 @@ jobs:
       run: |
         ./build/release/test/unittest --test-config test/configs/verify_fetch_row.json
 
+    - name: test/configs/enable_verification.json
+      if: (success() || failure()) && steps.build.conclusion == 'success'
+      shell: bash
+      run: |
+        ./build/release/test/unittest --test-config test/configs/enable_verification.json
+
     - name: Test dictionary_expression
       if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
