fix: replace all wasm references

--- a/.github/workflows/InvokeCI.yml
+++ b/.github/workflows/InvokeCI.yml
@@ -92,13 +92,13 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     needs:
+      - extensions
       - osx
       - linux-release
       - windows
       - python
       - pyodide
       - R
-      - Wasm
       - static-libraries
     outputs:
       is-success: ${{ steps.set-output.outputs.success }}
@@ -106,13 +106,13 @@ jobs:
       - id: set-output
         shell: bash
         run: |
-          if [[ "${{ needs.osx.result }}" == "success" && \
+          if [[ "${{ needs.extensions.result }}" == "success" && \
+                "${{ needs.osx.result }}" == "success" && \
                 "${{ needs.linux-release.result }}" == "success" && \
                 "${{ needs.windows.result }}" == "success" && \
                 "${{ needs.python.result }}" == "success" && \
                 "${{ needs.pyodide.result }}" == "success" && \
                 "${{ needs.R.result }}" == "success" && \
-                "${{ needs.Wasm.result }}" == "success" && \
                 "${{ needs.static-libraries.result }}" == "success" ]]; then
             echo "success=true" >> $GITHUB_OUTPUT
           else
