--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -542,8 +542,8 @@
         "name": "ieee_floating_point_ops",
         "description": "Use IEE754-compliant floating point operations (returning NAN instead of errors/NULL).",
         "type": "BOOLEAN",
-        "scope": "local",
-        "struct": "IEEEFloatingPointOpsSetting"
+        "default_scope": "local",
+        "default_value": "true"
     },
     {
         "name": "immediate_transaction_mode",
