add boilerplate for casts from VARIANT to other type

--- a/src/function/cast/CMakeLists.txt
+++ b/src/function/cast/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library_unity(
   uuid_casts.cpp
   bignum_casts.cpp
   nested_to_varchar_cast.cpp
+  variant_casts.cpp
   vector_cast_helpers.cpp)
 
 set(ALL_OBJECT_FILES
