--- a/src/function/scalar/variant/CMakeLists.txt
+++ b/src/function/scalar/variant/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library_unity(duckdb_func_variant_main OBJECT variant_utils.cpp)
+add_library_unity(duckdb_func_variant_main OBJECT variant_utils.cpp
+                  variant_extract.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_func_variant_main>
     PARENT_SCOPE)
