continue-on-error: true

--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -687,6 +687,7 @@ jobs:
 
       - name: Check Coverage
         shell: bash
+        continue-on-error: true
         run: |
           make coverage-check
 
