--- a/src/planner/binder/expression/CMakeLists.txt
+++ b/src/planner/binder/expression/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library_unity(
   bind_comparison_expression.cpp
   bind_conjunction_expression.cpp
   bind_constant_expression.cpp
+  bind_measure_definition_expression.cpp
   bind_function_expression.cpp
   bind_lambda.cpp
   bind_macro_expression.cpp
