--- a/.github/workflows/InvokeCI.yml
+++ b/.github/workflows/InvokeCI.yml
@@ -69,6 +69,7 @@ jobs:
     with:
       override_git_describe: ${{ inputs.override_git_describe }}
       git_ref: ${{ inputs.git_ref }}
+      skip_tests: ${{ inputs.skip_tests }}
 
   Wasm:
     uses: ./.github/workflows/Wasm.yml
