--- a/.github/workflows/NotifyExternalRepositories.yml
+++ b/.github/workflows/NotifyExternalRepositories.yml
@@ -110,6 +110,6 @@ jobs:
       - name: Call /dispatch
         if: ${{ github.repository == 'duckdb/duckdb' }}
         run: |
-          export URL=https://api.github.com/repos/duckdb/duckdb-python/actions/workflows/on_external_dispatch.yml/dispatches
-          export DATA='{"ref": "${{ inputs.target-branch }}", "inputs": {"duckdb-sha": "${{ inputs.duckdb-sha }}", "force-version": "${{ inputs.override-git-describe }}", "publish-packages": ${{ inputs.should-publish }}, "commit-duckdb-sha": true}}'
+          export URL=https://api.github.com/repos/duckdb/duckdb-python/actions/workflows/release.yml/dispatches
+          export DATA='{"ref": "${{ inputs.target-branch }}", "inputs": {"duckdb-sha": "${{ inputs.duckdb-sha }}", "stable-version": "${{ inputs.override-git-describe }}", "pypi-index": "${{ inputs.should-publish == 'false' && 'test' || 'prod' }}" }}'
           curl -v -XPOST -u "${PAT_USER}:${PAT_TOKEN}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" $URL --data "$DATA"
