Only run on pythonpkg changes

--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -1,7 +1,11 @@
 name: Python
 on:
   push:
+    paths:
+      - tools/pythonpkg/**
   pull_request:
+    paths:
+      - tools/pythonpkg/**
 
 jobs:
   warn-and-fail:
