--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -180,7 +180,7 @@ jobs:
     - name: Test
       shell: bash
       run: |
-          python3 scripts/run_tests_one_by_one.py build/relassert/test/unittest "*" --no-exit --timeout 1200 --force-storage
+          python3 scripts/run_tests_one_by_one.py build/relassert/test/unittest --on-init "CALL enable_logging(level='trace', storage='stdout')" "*" --no-exit --timeout 1200 --force-storage
 
   smaller-binary:
     name: Smaller Binary
