--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Install
         shell: bash
-        run: sudo apt-get update -y -qq && sudo apt-get install -y -qq ninja-build libcurl4-openssl-dev && pip install requests sudo apt-get update
+        run: sudo apt-get update -y -qq && sudo apt-get install -y -qq ninja-build libcurl4-openssl-dev && pip install requests
 
       - name: Setup Ccache
         uses: hendrikmuhs/ccache-action@main
