--- a/.github/workflows/Extensions.yml
+++ b/.github/workflows/Extensions.yml
@@ -142,6 +142,7 @@ jobs:
       override_tag: ${{ inputs.override_git_describe }}
       duckdb_ref: ${{ inputs.git_ref }}
       skip_tests: ${{ inputs.skip_tests && true || false }}
+      save_cache: ${{ github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' }}
 
   # Build the extensions from .github/config/rust_based_extensions.cmake
   rust-based-extensions:
@@ -157,6 +158,7 @@ jobs:
       override_tag: ${{ inputs.override_git_describe }}
       duckdb_ref: ${{ inputs.git_ref }}
       skip_tests: ${{ inputs.skip_tests && true || false }}
+      save_cache: ${{ github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' }}
 
   # Merge all extensions into a single, versioned repository
   create-extension-repository:
