--- a/extension/autocomplete/CMakeLists.txt
+++ b/extension/autocomplete/CMakeLists.txt
@@ -4,9 +4,11 @@ project(AutoCompleteExtension)
 
 include_directories(include)
 
-set(AUTOCOMPLETE_EXTENSION_FILES
-    autocomplete_extension.cpp matcher.cpp tokenizer.cpp keyword_helper.cpp
-    keyword_map.cpp)
+set(AUTOCOMPLETE_EXTENSION_FILES autocomplete_extension.cpp keyword_helper.cpp
+        keyword_map.cpp matcher.cpp tokenizer.cpp)
+
+add_subdirectory(parser)
+add_subdirectory(transformer)
 
 build_static_extension(autocomplete ${AUTOCOMPLETE_EXTENSION_FILES})
 set(PARAMETERS "-warnings")
