add function registration functions with conflict resolution

--- a/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
+++ b/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
@@ -245,6 +245,17 @@ typedef enum duckdb_cast_mode {
 	DUCKDB_CAST_TRY = 1
 } duckdb_cast_mode;
 
+typedef enum duckdb_on_conflict {
+    // Error on conflict
+	DUCKDB_ON_CONFLICT_ERROR = 0,
+	// Silently do nothing on conflict
+	DUCKDB_ON_CONFLICT_IGNORE = 1,
+	// Replace on conflict
+	DUCKDB_ON_CONFLICT_REPLACE = 2,
+	// Only for functions: attempt to add an overload if the function already exists
+	DUCKDB_ON_CONFLICT_ALTER = 3
+} duckdb_on_conflict;
+
 //===--------------------------------------------------------------------===//
 // General type definitions
 //===--------------------------------------------------------------------===//
